--- a/spec/fixtures/vcr_cassettes/Discover_Movies_Page/User_Story_8/takes_user_to_movies_index_with_movies_by_keyword_when_button_is_clicked.yml
+++ b/spec/fixtures/vcr_cassettes/Discover_Movies_Page/User_Story_8/takes_user_to_movies_index_with_movies_by_keyword_when_button_is_clicked.yml
@@ -25,19 +25,19 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Thu, 11 May 2023 17:24:40 GMT
+      - Thu, 11 May 2023 20:05:49 GMT
       Server:
       - openresty
       Cache-Control:
-      - public, max-age=26334
+      - public, max-age=22331
       X-Memc:
-      - MISS, STORE
+      - HIT
       X-Memc-Key:
       - 129a0b8f8ce1c8689149f00e914aa3d0
       X-Memc-Age:
-      - '0'
+      - '9669'
       X-Memc-Expires:
-      - '26334'
+      - '16665'
       Etag:
       - W/"6cb3953d69e6e11abd57ae4be0101889"
       Vary:
@@ -46,15 +46,15 @@ http_interactions:
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 8bd27032f0d38908fbe32b696e45c288.cloudfront.net (CloudFront)
+      - 1.1 29f1da35ce271d2cdc88184ed0c1f86c.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
       - DEN50-C2
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - Z0cswFCsrmp2p3sqgCk5Ox475HyUlngWxSFfKgNQW7hiPALN2G1pXQ==
+      - EeQpnIvF9BYaj_tL8Q058Qzoeh1C-Ldla-5Am9yWkHXxGeNE7uMyMg==
       Age:
-      - '13172'
+      - '14028'
     body:
       encoding: ASCII-8BIT
       string: '{"page":1,"results":[{"adult":false,"backdrop_path":"/cXQH2u7wUIX1eoIdEj51kHXoWhX.jpg","genre_ids":[35,80],"id":100,"original_language":"en","original_title":"Lock,
@@ -68,5 +68,5 @@ http_interactions:
         Ritchie. Interviews were conducted with Nick Moran, Jason Flemyng, Dexter
         Fletcher and Jason Statham.","popularity":0.6,"poster_path":null,"release_date":"2005-01-01","title":"The
         Making of Lock, Stock, and Two Smoking Barrels","video":false,"vote_average":0.0,"vote_count":0}],"total_pages":1,"total_results":2}'
-  recorded_at: Thu, 11 May 2023 21:04:12 GMT
+  recorded_at: Thu, 11 May 2023 23:59:37 GMT
 recorded_with: VCR 6.1.0
