--- a/spec/fixtures/vcr_cassettes/User_Show_Page/User_Dashboard_5/displays_a_button_Discover_Movies_.yml
+++ b/spec/fixtures/vcr_cassettes/User_Show_Page/User_Dashboard_5/displays_a_button_Discover_Movies_.yml
@@ -25,36 +25,36 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Thu, 11 May 2023 17:24:43 GMT
+      - Thu, 11 May 2023 20:05:52 GMT
       Server:
       - openresty
       Cache-Control:
-      - public, max-age=25350
+      - public, max-age=28683
       X-Memc:
       - HIT
       X-Memc-Key:
       - 502221c590c8994507bac9cb8903859b
       X-Memc-Age:
-      - '21341'
+      - '6288'
       X-Memc-Expires:
-      - '4092'
+      - '21302'
       Etag:
-      - W/"c02da95ec2726bb5c388fd9a9ce8fea4"
+      - W/"7979ac125825ec7ae60b689c87a16ec7"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 824a5d9ed02451bcb68b15ae5991dce0.cloudfront.net (CloudFront)
+      - 1.1 b2e880ac67c1fba390623b9fc04bd63a.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
       - DEN50-C2
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - wHIU8UGnYfp2zb96TJd2Ln4jKkjkDwrn-YqULbPO3SfeIDmD4E2TEg==
+      - vfPC6gToDVHk19ahhmB0MLMZJKTdPm-jmk_GDJMyzSlmg2gi5zIUoA==
       Age:
-      - '13189'
+      - '14043'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/cXQH2u7wUIX1eoIdEj51kHXoWhX.jpg","belongs_to_collection":null,"budget":1350000,"genres":[{"id":35,"name":"Comedy"},{"id":80,"name":"Crime"}],"homepage":"http://www.universalstudiosentertainment.com/lock-stock-and-two-smoking-barrels/","id":100,"imdb_id":"tt0120735","original_language":"en","original_title":"Lock,
@@ -68,8 +68,8 @@ http_interactions:
         Filmed Entertainment","origin_country":"US"},{"id":20076,"logo_path":"/i9qXGJIP9fGN22PP5jXUVENbyHi.png","name":"HandMade
         Films","origin_country":"GB"}],"production_countries":[{"iso_3166_1":"GB","name":"United
         Kingdom"},{"iso_3166_1":"US","name":"United States of America"}],"release_date":"1998-08-28","revenue":28356188,"runtime":105,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"A
-        Disgrace to Criminals Everywhere.","title":"Lock, Stock and Two Smoking Barrels","video":false,"vote_average":8.133,"vote_count":5904}'
-  recorded_at: Thu, 11 May 2023 21:04:32 GMT
+        Disgrace to Criminals Everywhere.","title":"Lock, Stock and Two Smoking Barrels","video":false,"vote_average":8.133,"vote_count":5905}'
+  recorded_at: Thu, 11 May 2023 23:59:55 GMT
 - request:
     method: get
     uri: https://api.themoviedb.org/3/movie/100?api_key=DONT_SHARE_MY_SECRET_KEY&language=en-US
@@ -95,36 +95,36 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Thu, 11 May 2023 17:24:43 GMT
+      - Thu, 11 May 2023 20:05:52 GMT
       Server:
       - openresty
       Cache-Control:
-      - public, max-age=25350
+      - public, max-age=28683
       X-Memc:
       - HIT
       X-Memc-Key:
       - 502221c590c8994507bac9cb8903859b
       X-Memc-Age:
-      - '21341'
+      - '6288'
       X-Memc-Expires:
-      - '4092'
+      - '21302'
       Etag:
-      - W/"c02da95ec2726bb5c388fd9a9ce8fea4"
+      - W/"7979ac125825ec7ae60b689c87a16ec7"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 e7ff4a714a3b1f464db9c76ee954a564.cloudfront.net (CloudFront)
+      - 1.1 c4fb40b7909e4dd897bba2e297b284e6.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
       - DEN50-C2
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - qJtak8FnKbJLTQB3RrLiwLXg_4r7quvBQzMT2npGRQhbpo9Yi1fk1w==
+      - WSunzzbFN_VAAEBnWCk1gADhhukk3MvNMOmr9EOIKAkN0ZsShZ-pkA==
       Age:
-      - '13189'
+      - '14043'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/cXQH2u7wUIX1eoIdEj51kHXoWhX.jpg","belongs_to_collection":null,"budget":1350000,"genres":[{"id":35,"name":"Comedy"},{"id":80,"name":"Crime"}],"homepage":"http://www.universalstudiosentertainment.com/lock-stock-and-two-smoking-barrels/","id":100,"imdb_id":"tt0120735","original_language":"en","original_title":"Lock,
@@ -138,8 +138,148 @@ http_interactions:
         Filmed Entertainment","origin_country":"US"},{"id":20076,"logo_path":"/i9qXGJIP9fGN22PP5jXUVENbyHi.png","name":"HandMade
         Films","origin_country":"GB"}],"production_countries":[{"iso_3166_1":"GB","name":"United
         Kingdom"},{"iso_3166_1":"US","name":"United States of America"}],"release_date":"1998-08-28","revenue":28356188,"runtime":105,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"A
-        Disgrace to Criminals Everywhere.","title":"Lock, Stock and Two Smoking Barrels","video":false,"vote_average":8.133,"vote_count":5904}'
-  recorded_at: Thu, 11 May 2023 21:04:32 GMT
+        Disgrace to Criminals Everywhere.","title":"Lock, Stock and Two Smoking Barrels","video":false,"vote_average":8.133,"vote_count":5905}'
+  recorded_at: Thu, 11 May 2023 23:59:55 GMT
+- request:
+    method: get
+    uri: https://api.themoviedb.org/3/movie/100?api_key=DONT_SHARE_MY_SECRET_KEY&language=en-US
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v2.7.4
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Content-Type:
+      - application/json;charset=utf-8
+      Transfer-Encoding:
+      - chunked
+      Connection:
+      - keep-alive
+      Date:
+      - Thu, 11 May 2023 20:05:52 GMT
+      Server:
+      - openresty
+      Cache-Control:
+      - public, max-age=28683
+      X-Memc:
+      - HIT
+      X-Memc-Key:
+      - 502221c590c8994507bac9cb8903859b
+      X-Memc-Age:
+      - '6288'
+      X-Memc-Expires:
+      - '21302'
+      Etag:
+      - W/"7979ac125825ec7ae60b689c87a16ec7"
+      Vary:
+      - Accept-Encoding
+      - Origin
+      X-Cache:
+      - Hit from cloudfront
+      Via:
+      - 1.1 2c861897aa9389c1f47299b6fea5b59c.cloudfront.net (CloudFront)
+      X-Amz-Cf-Pop:
+      - DEN50-C2
+      Alt-Svc:
+      - h3=":443"; ma=86400
+      X-Amz-Cf-Id:
+      - WI-gDvYoQ9JkwtaZyBEw9irxPmYjztbPLBFI4uILkMgy-HB1gh6u0w==
+      Age:
+      - '14043'
+    body:
+      encoding: ASCII-8BIT
+      string: '{"adult":false,"backdrop_path":"/cXQH2u7wUIX1eoIdEj51kHXoWhX.jpg","belongs_to_collection":null,"budget":1350000,"genres":[{"id":35,"name":"Comedy"},{"id":80,"name":"Crime"}],"homepage":"http://www.universalstudiosentertainment.com/lock-stock-and-two-smoking-barrels/","id":100,"imdb_id":"tt0120735","original_language":"en","original_title":"Lock,
+        Stock and Two Smoking Barrels","overview":"A card shark and his unwillingly-enlisted
+        friends need to make a lot of cash quick after losing a sketchy poker match.
+        To do this they decide to pull a heist on a small-time gang who happen to
+        be operating out of the flat next door.","popularity":11.328,"poster_path":"/8kSerJrhrJWKLk1LViesGcnrUPE.jpg","production_companies":[{"id":491,"logo_path":"/rUp0lLKa1pr4UsPm8fgzmnNGxtq.png","name":"Summit
+        Entertainment","origin_country":"US"},{"id":21920,"logo_path":null,"name":"The
+        Steve Tisch Company","origin_country":""},{"id":13419,"logo_path":null,"name":"SKA
+        Films","origin_country":"GB"},{"id":1382,"logo_path":"/sOg7LGESPH5vCTOIdbMhLuypoLL.png","name":"PolyGram
+        Filmed Entertainment","origin_country":"US"},{"id":20076,"logo_path":"/i9qXGJIP9fGN22PP5jXUVENbyHi.png","name":"HandMade
+        Films","origin_country":"GB"}],"production_countries":[{"iso_3166_1":"GB","name":"United
+        Kingdom"},{"iso_3166_1":"US","name":"United States of America"}],"release_date":"1998-08-28","revenue":28356188,"runtime":105,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"A
+        Disgrace to Criminals Everywhere.","title":"Lock, Stock and Two Smoking Barrels","video":false,"vote_average":8.133,"vote_count":5905}'
+  recorded_at: Thu, 11 May 2023 23:59:55 GMT
+- request:
+    method: get
+    uri: https://api.themoviedb.org/3/movie/100?api_key=DONT_SHARE_MY_SECRET_KEY&language=en-US
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v2.7.4
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Content-Type:
+      - application/json;charset=utf-8
+      Transfer-Encoding:
+      - chunked
+      Connection:
+      - keep-alive
+      Date:
+      - Thu, 11 May 2023 20:05:52 GMT
+      Server:
+      - openresty
+      Cache-Control:
+      - public, max-age=28683
+      X-Memc:
+      - HIT
+      X-Memc-Key:
+      - 502221c590c8994507bac9cb8903859b
+      X-Memc-Age:
+      - '6288'
+      X-Memc-Expires:
+      - '21302'
+      Etag:
+      - W/"7979ac125825ec7ae60b689c87a16ec7"
+      Vary:
+      - Accept-Encoding
+      - Origin
+      X-Cache:
+      - Hit from cloudfront
+      Via:
+      - 1.1 23d87d8c2ce38e34462e6c134d187eea.cloudfront.net (CloudFront)
+      X-Amz-Cf-Pop:
+      - DEN50-C2
+      Alt-Svc:
+      - h3=":443"; ma=86400
+      X-Amz-Cf-Id:
+      - ktpV8CoSoa4F9OETOnlxh-ZRPBDw3E_uVB3FQYLE9P6rNDVwcfgzOQ==
+      Age:
+      - '14043'
+    body:
+      encoding: ASCII-8BIT
+      string: '{"adult":false,"backdrop_path":"/cXQH2u7wUIX1eoIdEj51kHXoWhX.jpg","belongs_to_collection":null,"budget":1350000,"genres":[{"id":35,"name":"Comedy"},{"id":80,"name":"Crime"}],"homepage":"http://www.universalstudiosentertainment.com/lock-stock-and-two-smoking-barrels/","id":100,"imdb_id":"tt0120735","original_language":"en","original_title":"Lock,
+        Stock and Two Smoking Barrels","overview":"A card shark and his unwillingly-enlisted
+        friends need to make a lot of cash quick after losing a sketchy poker match.
+        To do this they decide to pull a heist on a small-time gang who happen to
+        be operating out of the flat next door.","popularity":11.328,"poster_path":"/8kSerJrhrJWKLk1LViesGcnrUPE.jpg","production_companies":[{"id":491,"logo_path":"/rUp0lLKa1pr4UsPm8fgzmnNGxtq.png","name":"Summit
+        Entertainment","origin_country":"US"},{"id":21920,"logo_path":null,"name":"The
+        Steve Tisch Company","origin_country":""},{"id":13419,"logo_path":null,"name":"SKA
+        Films","origin_country":"GB"},{"id":1382,"logo_path":"/sOg7LGESPH5vCTOIdbMhLuypoLL.png","name":"PolyGram
+        Filmed Entertainment","origin_country":"US"},{"id":20076,"logo_path":"/i9qXGJIP9fGN22PP5jXUVENbyHi.png","name":"HandMade
+        Films","origin_country":"GB"}],"production_countries":[{"iso_3166_1":"GB","name":"United
+        Kingdom"},{"iso_3166_1":"US","name":"United States of America"}],"release_date":"1998-08-28","revenue":28356188,"runtime":105,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"A
+        Disgrace to Criminals Everywhere.","title":"Lock, Stock and Two Smoking Barrels","video":false,"vote_average":8.133,"vote_count":5905}'
+  recorded_at: Thu, 11 May 2023 23:59:55 GMT
 - request:
     method: get
     uri: https://api.themoviedb.org/3/movie/202?api_key=DONT_SHARE_MY_SECRET_KEY&language=en-US
@@ -165,11 +305,11 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Thu, 11 May 2023 19:09:19 GMT
+      - Thu, 11 May 2023 20:08:50 GMT
       Server:
       - openresty
       Cache-Control:
-      - public, max-age=27770
+      - public, max-age=23965
       X-Memc:
       - MISS
       X-Memc-Key:
@@ -177,25 +317,83 @@ http_interactions:
       X-Memc-Age:
       - '0'
       X-Memc-Expires:
-      - '27770'
+      - '23965'
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
       - Error from cloudfront
       Via:
-      - 1.1 9cefde3a3c84cc779d3c26a39c2e4430.cloudfront.net (CloudFront)
+      - 1.1 48a6ccbb0ddb052ab512a3422295bd38.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
       - DEN50-C2
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - soOuAXL0wvdYA5SYmCDVK9l-ai8Liyl4bn-H0jCHgXNm4ULmXGx9EQ==
+      - iBPyNmaKaVgx-ejfaT9ULTQNI0yQcJ5RvueAsaBNILzwOVw-g29mBw==
       Age:
-      - '6913'
+      - '13865'
     body:
       encoding: ASCII-8BIT
       string: '{"success":false,"status_code":34,"status_message":"The resource you
         requested could not be found."}'
-  recorded_at: Thu, 11 May 2023 21:04:33 GMT
+  recorded_at: Thu, 11 May 2023 23:59:55 GMT
+- request:
+    method: get
+    uri: https://api.themoviedb.org/3/movie/202?api_key=DONT_SHARE_MY_SECRET_KEY&language=en-US
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v2.7.4
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+  response:
+    status:
+      code: 404
+      message: Not Found
+    headers:
+      Content-Type:
+      - application/json;charset=utf-8
+      Transfer-Encoding:
+      - chunked
+      Connection:
+      - keep-alive
+      Date:
+      - Thu, 11 May 2023 20:08:50 GMT
+      Server:
+      - openresty
+      Cache-Control:
+      - public, max-age=23965
+      X-Memc:
+      - MISS
+      X-Memc-Key:
+      - babe0f0c298054bd6d81a6e78f6ecd1c
+      X-Memc-Age:
+      - '0'
+      X-Memc-Expires:
+      - '23965'
+      Vary:
+      - Accept-Encoding
+      - Origin
+      X-Cache:
+      - Error from cloudfront
+      Via:
+      - 1.1 38059ba65876500c040fb73e2cbaebf4.cloudfront.net (CloudFront)
+      X-Amz-Cf-Pop:
+      - DEN50-C2
+      Alt-Svc:
+      - h3=":443"; ma=86400
+      X-Amz-Cf-Id:
+      - 37cr192jW17qw3n_QZuUWh2tOYjpCTz2_EoyzXLhiWyuolsCm1gvvQ==
+      Age:
+      - '13865'
+    body:
+      encoding: ASCII-8BIT
+      string: '{"success":false,"status_code":34,"status_message":"The resource you
+        requested could not be found."}'
+  recorded_at: Thu, 11 May 2023 23:59:55 GMT
 recorded_with: VCR 6.1.0
