--- a/spec/fixtures/vcr_cassettes/ViewingParty/instance_methods/_poster.yml
+++ b/spec/fixtures/vcr_cassettes/ViewingParty/instance_methods/_poster.yml
@@ -25,36 +25,36 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Thu, 11 May 2023 17:24:43 GMT
+      - Thu, 11 May 2023 20:05:52 GMT
       Server:
       - openresty
       Cache-Control:
-      - public, max-age=25350
+      - public, max-age=28683
       X-Memc:
       - HIT
       X-Memc-Key:
       - 502221c590c8994507bac9cb8903859b
       X-Memc-Age:
-      - '21341'
+      - '6288'
       X-Memc-Expires:
-      - '4092'
+      - '21302'
       Etag:
-      - W/"c02da95ec2726bb5c388fd9a9ce8fea4"
+      - W/"7979ac125825ec7ae60b689c87a16ec7"
       Vary:
       - Accept-Encoding
       - Origin
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 b2e880ac67c1fba390623b9fc04bd63a.cloudfront.net (CloudFront)
+      - 1.1 b7f0c5734a286f56595c1e1b456020a2.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
       - DEN50-C2
       Alt-Svc:
       - h3=":443"; ma=86400
       X-Amz-Cf-Id:
-      - prISKZFyWbogWkzHQ408rXGtFhi5igUHWxNJfd-tj5lA-tgPs7hKEQ==
+      - i4aZ70QUnw38rn3J5g52kAgmKJfqEdgY87UQyjTz6bihFn_OvX7hzw==
       Age:
-      - '13190'
+      - '13626'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/cXQH2u7wUIX1eoIdEj51kHXoWhX.jpg","belongs_to_collection":null,"budget":1350000,"genres":[{"id":35,"name":"Comedy"},{"id":80,"name":"Crime"}],"homepage":"http://www.universalstudiosentertainment.com/lock-stock-and-two-smoking-barrels/","id":100,"imdb_id":"tt0120735","original_language":"en","original_title":"Lock,
@@ -68,6 +68,74 @@ http_interactions:
         Filmed Entertainment","origin_country":"US"},{"id":20076,"logo_path":"/i9qXGJIP9fGN22PP5jXUVENbyHi.png","name":"HandMade
         Films","origin_country":"GB"}],"production_countries":[{"iso_3166_1":"GB","name":"United
         Kingdom"},{"iso_3166_1":"US","name":"United States of America"}],"release_date":"1998-08-28","revenue":28356188,"runtime":105,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"A
-        Disgrace to Criminals Everywhere.","title":"Lock, Stock and Two Smoking Barrels","video":false,"vote_average":8.133,"vote_count":5904}'
-  recorded_at: Thu, 11 May 2023 21:04:33 GMT
+        Disgrace to Criminals Everywhere.","title":"Lock, Stock and Two Smoking Barrels","video":false,"vote_average":8.133,"vote_count":5905}'
+  recorded_at: Thu, 11 May 2023 23:52:58 GMT
+- request:
+    method: get
+    uri: https://api.themoviedb.org/3/movie/238?api_key=DONT_SHARE_MY_SECRET_KEY&language=en-US
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v2.7.4
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Content-Type:
+      - application/json;charset=utf-8
+      Transfer-Encoding:
+      - chunked
+      Connection:
+      - keep-alive
+      Date:
+      - Thu, 11 May 2023 20:05:51 GMT
+      Server:
+      - openresty
+      Cache-Control:
+      - public, max-age=26004
+      X-Memc:
+      - HIT
+      X-Memc-Key:
+      - 9d48db5c244b9c3e3d162ef155211175
+      X-Memc-Age:
+      - '8083'
+      X-Memc-Expires:
+      - '17443'
+      Etag:
+      - W/"e329ae09382fbfa15066511879a57083"
+      Vary:
+      - Accept-Encoding
+      - Origin
+      X-Cache:
+      - Hit from cloudfront
+      Via:
+      - 1.1 28d79637e27f11e3ab19a9515e273a5a.cloudfront.net (CloudFront)
+      X-Amz-Cf-Pop:
+      - DEN50-C2
+      Alt-Svc:
+      - h3=":443"; ma=86400
+      X-Amz-Cf-Id:
+      - Y9k8KZNEt1DMYghiajh88UvNTC66Pk08fHPV-KsRGAt1jeXCUJZvcg==
+      Age:
+      - '13628'
+    body:
+      encoding: ASCII-8BIT
+      string: '{"adult":false,"backdrop_path":"/tmU7GeKVybMWFButWEGl2M4GeiP.jpg","belongs_to_collection":{"id":230,"name":"The
+        Godfather Collection","poster_path":"/9Baumh5J9N1nJUYzNkm0xsgjpwY.jpg","backdrop_path":"/3WZTxpgscsmoUk81TuECXdFOD0R.jpg"},"budget":6000000,"genres":[{"id":18,"name":"Drama"},{"id":80,"name":"Crime"}],"homepage":"http://www.thegodfather.com/","id":238,"imdb_id":"tt0068646","original_language":"en","original_title":"The
+        Godfather","overview":"Spanning the years 1945 to 1955, a chronicle of the
+        fictional Italian-American Corleone crime family. When organized crime family
+        patriarch, Vito Corleone barely survives an attempt on his life, his youngest
+        son, Michael steps in to take care of the would-be killers, launching a campaign
+        of bloody revenge.","popularity":95.565,"poster_path":"/3bhkrj58Vtu7enYsRolD1fZdja1.jpg","production_companies":[{"id":4,"logo_path":"/gz66EfNoYPqHTYI4q9UEN4CbHRc.png","name":"Paramount","origin_country":"US"},{"id":10211,"logo_path":null,"name":"Alfran
+        Productions","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
+        States of America"}],"release_date":"1972-03-14","revenue":245066411,"runtime":175,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"},{"english_name":"Italian","iso_639_1":"it","name":"Italiano"},{"english_name":"Latin","iso_639_1":"la","name":"Latin"}],"status":"Released","tagline":"An
+        offer you can''t refuse.","title":"The Godfather","video":false,"vote_average":8.713,"vote_count":17885}'
+  recorded_at: Thu, 11 May 2023 23:52:59 GMT
 recorded_with: VCR 6.1.0
